--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 
     <!-- NAVIGATION -->
     <div class="navbar">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
         <a href="projects.html">Projects</a>
         <a href="blog.html">Blog</a>
