--- a/projects.html
+++ b/projects.html
@@ -128,7 +128,7 @@
 <body>  
     <!-- NAVIGATION -->
     <div class="navbar">
-        <a href="home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
         <a href="projects.html">Projects</a>
         <a href="blog.html">Blog</a>
